@@ -1,6 +1,6 @@
 # -verbose:class
 -Xms1024M
--Xmx3072M
+-Xmx2560M
 -Xss512K
 
 #-Xcomp
@@ -32,6 +32,7 @@
 # -XX:+UseCountedLoopSafepoints
 # -XX:+SafepointTimeout
 # -XX:SafepointTimeoutDelay=1000
+
 -XX:+EnableJVMCI
 -XX:+UseJVMCICompiler
 -XX:+EagerJVMCI
@@ -42,6 +43,9 @@
 
 -XX:+UseShenandoahGC
 -XX:ConcGCThreads=4
+#-XX:+UseZGC
+#-XX:ParalleGCThreads=4
+-XX:+AlwaysPreTouch
 # -XX:+DisableExplicitGC
 # -XX:G1HeapRegionSize=1M
 # -XX:MetaspaceSize=640M
@@ -69,29 +73,3 @@
 -Dsun.java2d.metal=true
 
 --illegal-access=warn
-
---add-opens java.base/java.lang=ALL-UNNAMED
---add-opens java.base/java.io=ALL-UNNAMED
---add-opens java.base/java.math=ALL-UNNAMED
---add-opens java.base/java.net=ALL-UNNAMED
---add-opens java.base/java.nio=ALL-UNNAMED
---add-opens java.base/java.security=ALL-UNNAMED
---add-opens java.base/java.text=ALL-UNNAMED
---add-opens java.base/java.time=ALL-UNNAMED
---add-opens java.base/java.util=ALL-UNNAMED
---add-opens java.base/jdk.internal.access=ALL-UNNAMED
---add-opens java.base/jdk.internal.misc=ALL-UNNAMED
---add-opens=java.desktop/java.awt.event=ALL-UNNAMED
---add-opens=java.desktop/sun.font=ALL-UNNAMED
---add-opens=java.desktop/java.awt=ALL-UNNAMED
---add-opens=java.desktop/sun.awt=ALL-UNNAMED
---add-opens=java.desktop/javax.swing=ALL-UNNAMED
---add-opens=java.desktop/sun.swing=ALL-UNNAMED
---add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
---add-opens=java.desktop/java.awt.peer=ALL-UNNAMED
---add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED
---add-exports=java.desktop/sun.font=ALL-UNNAMED
---add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED
---add-exports=java.desktop/com.apple.laf=ALL-UNNAMED
---add-exports=java.desktop/com.apple.eawt.event=ALL-UNNAMED
-
